<resources>
    <string name="app_name">Weather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="temp">Temperature</string>
    <string name="TempMax">Temperature Max</string>
    <string name="TempMin">Temperature Min</string>
    <string name="description">Description</string>
    <string name="humidity">Humidity</string>
    <string name="windspeed">Wind Speed</string>
    <string name="winddegree">Wind Degree</string>
    <string name="cloudiness">Cloudiness</string>
    <string name="checkforcast">Check Forecast</string>
    <string name="charlotte">Charlotte, US</string>
</resources>